[package]
name = "ruuvi-gw-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
hifitime = { version = "4.0.2", default-features = false, features = ["serde", "std"] }
parking_lot = "0.12.3"
ruuvi-sensor-protocol = "0.6.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt"] }
warp = "0.3.7"
clap = { version = "4.4", features = ["derive"] }
serde_yaml = "0.9"
